--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
           <ul>
@@ -44,14 +46,14 @@
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
       </div>
-
     </section>
 
     <aside>
       <div class="content-wrapper">
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
-          <p>Find out when we are holding our next retreat and how your company
+          <p>
+            Find out when we are holding our next retreat and how your company
             or team can sign up!
           </p>
 
@@ -64,6 +66,71 @@
       </div> <!-- aside content wrapper ends -->
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow
+            outside of Lake Geneva, Wisconsin.</p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite 
+            bathrooms, 2 group meeting rooms, and 4 breakoutrooms.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Private chef team providing on
+            demand meals - just like your team kitchen.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, 
+            including private beach 1/2 mile from bungalow.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Retreat facilitator to manage 
+            your day to day activities so you all get a chance to reset.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Dedicated computer room for 
+            times that you must wifi.
+          </p>
+        </article>
+
+      </div> <!-- end of content wrapper div-->
+
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+          <h2>Be a better team in 5 days, like this one.</h2>
+          <article
+            <div>
+              <h3>LaCrue Bottle Co. October 2018</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eisumod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              </p>
+            </div>   
+          </article>   
+      </div>
+    </section>
 
   </main> <!-- main wrapper -->
 
@@ -71,6 +138,7 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
+          <h4>Contact</h4>
           <address>
             <p>
               555-555-5555<br>
