--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="img/unpluggedlogo.png" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="index.html">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure> 
       <div class="header-divider"></div>
       <nav>
           <ul>
@@ -45,7 +47,6 @@
   </header>
 
   <main>
-
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
@@ -121,8 +122,11 @@
     <section class="reviews">
       <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
-          <article
-            <div>
+          <article>
+              <figure>
+                <img src="img/reviews.jpg" alt="happy participants enjoying nature">
+              </figure>
+            <div>  
               <h3>LaCrue Bottle Co. October 2018</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
