--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <script src="https://kit.fontawesome.com/74667daea5.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
   
@@ -120,13 +121,13 @@
             <h4>Social</h4>
               <div class="social-icons">
                   <p>
-                    <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
+                    <a href="https://www.facebook.com/Skillcrush" target="_blank"><i class="fab fa-facebook"></i></a>
                   </p>
                   <p>
-                    <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+                    <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
                   </p>
                   <p>
-                    <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+                    <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
                   </p>
               </div>
           </div>
